[package]
name = "order-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum             = "=0.8.8"
chrono           = { version = "=0.4.44", features = ["serde"] }
dashmap          = "6"
hex              = "=0.4.3"
serde            = { version = "=1.0.228", features = ["derive"] }
serde_json       = "=1.0.149"
sha2             = "=0.10.9"
sqlx             = { version = "=0.7.4", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate"] }
tokio            = { version = "=1.49.0", features = ["full"] }
tracing          = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }
uuid             = { version = "=1.21.0", features = ["v4"] }
